<?xml version="1.0"?>
<package>
  <name>hello_msgs</name>
  <version>0.0.0</version>
  <description>
    Example package to show message generation
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/hello_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
