<?xml version="1.0"?>
<package>
  <name>hello_python</name>
  <version>0.0.0</version>
  <description>
    Example package to show simple python package
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
