<?xml version="1.0"?>
<package>
  <name>hello_rapps</name>
  <version>0.0.0</version>
  <description>
    Example package includes string_to_twist rapp and interactions
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/hello_rapps</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>string_to_twist</build_depend>
  <run_depend>string_to_twist</run_depend>

  <export>
    <rocon_app>rapps/string_to_twist/string_to_twist.rapp</rocon_app>
  </export>
</package>
