<?xml version="1.0"?>
<package>
  <name>listen_image</name>
  <version>0.0.0</version>
  <description>
    Example package that demonstrates image subscription.
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/listen_image</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv2</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
